Add backtest performance report for pre-computed features mode
- Initial capital set at $10,000.00
- Final equity reached $11,950.83, resulting in a net profit of $1,950.83 (19.51%)
- Total of 2,321 closed trades with a win rate of 59.84%
- Average win of $1.92 and average loss of -$0.77
- Profit factor calculated at 3.72
- Maximum drawdown recorded at 0.09% ($10.71)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore data and virtual environment directories
-data/
-venv/
+/data/
+/venv/
 __pycache__/
 *.pyc
 *.pyo
@@ -12,4 +12,10 @@ __pycache__/
 .DS_Store
 .idea/
 .vscode/
-reports/
+# Only ignore trade logs inside reports/backtests
+reports/backtests/trade_log.csv
+# Do not ignore the rest of reports/
+# !reports/
+# !reports/backtests/
+# !reports/backtests/equity_curve.png
+# !reports/backtests/performance_report.txt
